--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -16,6 +16,8 @@
     }
   }
 
+  
+
   &__tabs {
     width: 100%;
     max-width: 900px;
@@ -45,15 +47,38 @@
   }
 
   &__item {
+    position: relative;
     text-align: center;
     margin: 2rem auto;
     display: flex;
     flex-direction: column;
     gap: 6rem;
 
+    &--image {
+      position: relative;
+
+      img {
+        width: 100%;
+        position: relative;
+        z-index: 2;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: -1.2rem;
+        bottom: -1.8rem;
+        width: 90%;
+        height: 75%;
+        background: $soft-blue;
+        border-bottom-right-radius: 5rem;
+      }
+    }
+
     &--details {
       max-width: 530px;
       margin: 0 auto;
+      padding: 0 1.2rem;
 
       h3 {
         font-size: 1.3rem;
@@ -76,6 +101,10 @@
 }
 
 @media screen and (min-width: 1024px) {
+  #features {
+    position: relative;
+  }
+
   .features-container {
     padding: 4.5rem 1.2rem;
 
@@ -113,7 +142,25 @@
       justify-content: space-between;
       align-items: center;
       gap: 2rem;
+      position: static;
 
+      &--image {
+        position: static;
+        padding: 0 1.2rem;
+  
+       img {
+        min-height: 320px;
+       }
+  
+        &::after {
+          left: 0px;
+          bottom: 4rem;
+          width: 40%;
+          height: 320px;
+        }
+      }
+
+      
       &--details {
         max-width: 530px;
         margin: 0 auto;
