--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,21 +1,38 @@
 // Hero section
 .hero-container {
-  padding: 0 1.2rem;
   margin: 7rem auto 3.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 4rem;
+  position: relative;
 
   &__image {
+    position: relative;
+    padding: 0 1.2rem;
+
     img {
       width: 100%;
+      position: relative;
+      z-index: 2;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      right: 0px;
+      bottom: -0.8rem;
+      width: 80%;
+      height: 75%;
+      background: $soft-blue;
+      border-bottom-left-radius: 5rem;
     }
   }
 
   &__details {
     max-width: 530px;
     text-align: center;
+    padding: 0 1.2rem;
 
     h1 {
       font-size: 1.6rem;
@@ -60,20 +77,27 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .hero-container {
-    position: relative;
+    position: static;
     max-width: 1300px;
+    margin: 3rem auto 4.5rem;
     flex-direction: row-reverse;
     gap: 3rem;
     justify-content: space-between;
 
     &__image {
-      min-width: 500px;
+      min-width: 750px;
+      right: 0rem;
+      position: absolute;
+      right: 0;
+      top: 11rem;
     }
 
     &__details {
       text-align: left;
+      margin-right: auto;
+      padding-top: 5rem;
 
       h1 {
         font-size: 2.3rem;
