--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,8 @@
   transition: all 0.3s ease-in-out; }
 
 html {
-  font-size: 18px; }
+  font-size: 18px;
+  scroll-behavior: smooth; }
 
 body {
   overflow-x: hidden; }
